base/src/test/resources/failure/operator/cyclic.aya.txt
In file $FILE:6:15 ->

  4 |   bind tighter c
  5 | def infix c => c
  6 |   bind tighter d
                     ^^

Error: Circular precedence found between b, c, d

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
